--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 	<title>Web学习网 - 为你的Web开发技能加分</title>
 	<meta name="description" content="Web学习网 - 为你的Web开发技能加分" />
 	<meta name="keywords" content="Web学习网, WebXX, WebXX.net, pinewong, 黄松" />
+	<meta property="qc:admins" content="05007507776752006654" />	<!-- QQ Open -->
 	<link rel="icon" href="images/icon_32x32.ico" sizes="32x32" />
 	<link rel="icon" href="" sizes="192x192" />
 	<link rel="apple-touch-icon-precomposed" href="" sizes="180x180" />
@@ -29,6 +30,8 @@
 <%= render '/panels/backTop' %>
 <%= render '/panels/nav' %>
 
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 <%= yield %>
 
 <%= render '/panels/link' %>
