--- a/app/views/home/_outline.html.erb
+++ b/app/views/home/_outline.html.erb
@@ -1,6 +1,6 @@
 	<div id="outline" name="outline"><div class="wrap_pines">
 		<div id="out_title" class="center">
-			<h1><span>Web开发</span>应该怎么学</h1>
+			<h1><span class="span-title">Web开发</span>应该怎么学</h1>
 			<p>如今，各种互联网的Web应用程序层出不穷，那么如何快速入门，成长为一个优秀的Web开发工作者呢？</p>
 			　　					<p>这个问题不容易回答，几乎所有的培训机构都不能清晰地解答。没有人告诉你如何去做，于是，我们唯有自己去寻找...</p>
 		</div>
@@ -10,35 +10,35 @@
 		<div id="out_content">
 			<div class="item float_left">
 				<div class="icon">
-					<a style="cursor: pointer;"><img src="/images/outline1.png" /></a>
+					<a onclick="alertMessage('建设中...')" style="cursor: pointer;"><img src="/images/outline1.png" /></a>
 				</div>
-				<h1 class="title"><a style="cursor: pointer;">快速入门</a></h1>
+				<h1 class="title"><a onclick="alertMessage('建设中...')" style="cursor: pointer;">快速入门</a></h1>
 				<p class="main">视频教程、书籍，怎么开心怎么来，先跟着完成一个小Demo起，记住，此时兴趣最重要。</p>
-				<p class="view"><a style="cursor: pointer;">查看详细</a></p>
+				<p class="view"><a onclick="alertMessage('建设中...')" style="cursor: pointer;">查看详细</a></p>
 			</div>
 			<div class="item float_left">
 				<div class="icon">
-					<a style="cursor: pointer;"><img src="/images/outline2.png" /></a>
+					<a onclick="alertMessage('建设中...')" style="cursor: pointer;"><img src="/images/outline2.png" /></a>
 				</div>
-				<h1 class="title"><a style="cursor: pointer;">巩固练习</a></h1>
+				<h1 class="title"><a onclick="alertMessage('建设中...')" style="cursor: pointer;">巩固练习</a></h1>
 				<p class="main">从零开始学习，遇到二次问题一定做笔记。但还是仍然不要忘了练习，练习，练习。</p>
-				<p class="view"><a style="cursor: pointer;">查看详细</a></p>
+				<p class="view"><a onclick="alertMessage('建设中...')" style="cursor: pointer;">查看详细</a></p>
 			</div>
 			<div class="item float_left">
 				<div class="icon">
-					<a style="cursor: pointer;"><img src="/images/outline3.png" /></a>
+					<a onclick="alertMessage('建设中...')" style="cursor: pointer;"><img src="/images/outline3.png" /></a>
 				</div>
-				<h1 class="title"><a style="cursor: pointer;">系统学习</a></h1>
+				<h1 class="title"><a onclick="alertMessage('建设中...')" style="cursor: pointer;">系统学习</a></h1>
 				<p class="main">在能胜任简单的项目后，购买专业书籍进行系统学习，这段时间应该是扎实基本功。</p>
-				<p class="view"><a style="cursor: pointer;">查看详细</a></p>
+				<p class="view"><a onclick="alertMessage('建设中...')" style="cursor: pointer;">查看详细</a></p>
 			</div>
 			<div class="item float_left">
 				<div class="icon">
-					<a style="cursor: pointer;"><img src="/images/outline4.png" /></a>
+					<a onclick="alertMessage('建设中...')" style="cursor: pointer;"><img src="/images/outline4.png" /></a>
 				</div>
-				<h1 class="title"><a style="cursor: pointer;">成神之路</a></h1>
+				<h1 class="title"><a onclick="alertMessage('建设中...')" style="cursor: pointer;">成神之路</a></h1>
 				<p class="main">遇到问题，不要冷落谷歌，常用stackoverflow。此时的你应该能对手册运用自如！</p>
-				<p class="view"><a style="cursor: pointer;">查看详细</a></p>
+				<p class="view"><a onclick="alertMessage('建设中...')" style="cursor: pointer;">查看详细</a></p>
 			</div>
 		</div>
 	</div></div>
