--- a/app/views/home/_project.html.erb
+++ b/app/views/home/_project.html.erb
@@ -1,5 +1,5 @@
 	<div id="project"><div class="wrap_pines">
-		<h1 class="name">Web<span>项目</span>演示</h1>
+		<h1 class="name">Web<span class="span-title">项目</span>演示</h1>
 		<p class="words">简单的Demo演示</p>
 		<div class="line"></div>
 		<div class="demo"><ul>
@@ -36,5 +36,5 @@
 				<div class="remarks">2048</div>
 			</a></li>
 		</ul></div>
-		<div class="more"><a style="cursor: pointer;">更多项目</a></div>
+		<div class="more"><a onclick="alertMessage('建设中...')" style="cursor: pointer;">更多项目</a></div>
 	</div></div>
