--- a/app/views/panels/_link.html.erb
+++ b/app/views/panels/_link.html.erb
@@ -4,10 +4,10 @@
 		<div class="line"></div>
 		<div>
 			<ul>
-				<li><a target="_blank" style="cursor: pointer;">快速入门</a></li>
-				<li><a target="_blank" style="cursor: pointer;">巩固练习</a></li>
-				<li><a target="_blank" style="cursor: pointer;">系统学习</a></li>
-				<li><a target="_blank" style="cursor: pointer;">成神之路</a></li>
+				<li><a target="_blank" onclick="alertMessage('建设中...')" style="cursor: pointer;">快速入门</a></li>
+				<li><a target="_blank" onclick="alertMessage('建设中...')" style="cursor: pointer;">巩固练习</a></li>
+				<li><a target="_blank" onclick="alertMessage('建设中...')" style="cursor: pointer;">系统学习</a></li>
+				<li><a target="_blank" onclick="alertMessage('建设中...')" style="cursor: pointer;">成神之路</a></li>
 			</ul>
 		</div>
 	</div>
@@ -16,8 +16,8 @@
 		<div class="line"></div>
 		<div>
 			<ul>
-				<li><a target="_blank" style="cursor: pointer;">书籍推荐</a></li>
-				<li><a target="_blank" style="cursor: pointer;">软件、工具分享</a></li>
+				<li><a target="_blank" onclick="alertMessage('资料收集中...')" style="cursor: pointer;">书籍推荐</a></li>
+				<li><a target="_blank" href="<%= download_path %>">软件、工具分享</a></li>
 			</ul>
 		</div>
 	</div>
@@ -38,10 +38,11 @@
 		<div class="line"></div>
 		<div>
 			<ul>
-				<li><a target="_blank" href="http://www.pinewong.com/">PineWong's Notes</a></li>
+				<li><a target="_blank" href="http://www.pinewong.com/archives/285">Docker三步搭建开发调试环境</a></li>
+				<li><a target="_blank" href="http://www.pinewong.com/archives/274">《程序员修炼之道——从小工到专家》</a></li>
 				<li><a target="_blank" href="http://www.pinewong.com/archives/229">初识Ruby</a></li>
 				<li><a target="_blank" href="http://www.pinewong.com/archives/188">搭建OS X Rails环境</a></li>
-				<li><a target="_blank" href="http://www.pinewong.com/archives/33">搞笑解决问题</a></li>
+				<li><a target="_blank" href="http://www.pinewong.com/archives/33">高效解决问题</a></li>
 			</ul>
 		</div>
 	</div>
