--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,22 @@
-<h2>Forgot your password?</h2>
+<div id="getpassword" class="oauth">
+  <h1 class="oauth-title">找回密码</h1>
+  
+  <!-- 注册表单 -->
+	<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+	  <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+	  <div class="oauth-field">
+	    <%= f.email_field :email, autofocus: true, placeholder: '你的账户邮箱' %>
+	  </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+	  <div class="oauth-actions">
+	    <%= f.submit "发送重置密码邮件" %>
+	  </div>
+	<% end %>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+	<p class="oauth-link">
+		<%= link_to "已有账号？直接登录", new_session_path(resource_name), class: 'login-link' %>
+		<%= link_to "还没有账户？马上注册", new_registration_path(resource_name), class: 'signup-link' %>
+	</p> 
 
-<%= render "devise/shared/links" %>
+</div>
