--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,27 @@
-<h2>Sign up</h2>
+<div id="signup" class="oauth">
+  <h1 class="oauth-title">加入Web学习网，为技能加分</h1>
+  
+  <!-- 注册表单 -->
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <div class="oauth-field">
+      <%= f.email_field :email, autofocus: true, placeholder: '注册邮箱' %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+    <div class="oauth-field">
+      <%= f.password_field :password, autocomplete: "off", placeholder: '账户密码，6-12位，区分大小写，不能用空格' %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+    <div class="oauth-field">
+      <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: '确认账户密码' %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+    <div class="oauth-actions">
+      <%= f.submit "注册" %>
+    </div>
+  <% end %>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+  <p class="oauth-link"><%= link_to "已有账号？直接登录", new_session_path(resource_name) %></p> 
+</div>
 
-<%= render "devise/shared/links" %>
