--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -13,15 +13,52 @@ body { width: 1366px; margin: 0 auto; background: #fff; }
 #backtop { display: none; width: 56px; height: 56px; background: rgb(250,93,0); border-radius: 56px; cursor: pointer; opacity: 0.5;position: fixed;right: 40px;bottom: 40px;z-index: 25; font-size: 20px; line-height: 56px; text-align: center; color: #fff; }
 	#backtop:hover { opacity: 1; }
 
+/* 认证 */
+.oauth { width: 402px; border-radius: 10px; margin: 40px auto 60px; padding: 30px 40px 40px;  background: #eee; font-family: '微软雅黑','Helvetica Neue',sans-serif,'SimHei'; font-size: 14px; color: rgba(0,0,0,.6); }
+.oauth-title { text-align: center; font-size: 25px; color: #323a45; font-weight: normal; margin-bottom: 40px; }
+.oauth-field input { font-size: 16px; width: 370px; height: 48px; padding: 0 15px; margin-bottom: 15px; border: 1px solid rgba(50,58,69,.2); border-radius: 5px; }
+.oauth-actions input { margin-top: 40px; width: 100%; height: 48px; background: #323a45; color: #fff; transition: opacity .2s ease; opacity: 0.9; border-radius: 24px; border: none; font-size: 24px; cursor: pointer; }
+.oauth-link { text-align: center; margin-top: 20px; }
+
+/* 登录 */
+#login {}
+#login .tips { margin-bottom: 20px; font-size: 14px; }
+#login .tips .forget { float: right; }
+#login .quick { height: 60px; line-height: 60px; color: rgba(0,0,0,.6); font-size: 16px; }
+#login-quick-pic { float: right; margin-top: 5px; }
+#login-quick-pic a { margin-left: 20px; }
+#login-quick-pic a img { display: inline-block; height: 30px; width: 30px; }
+#login-qq:hover { src: '/images/login-github-2.png'; }
+#login-qq {  }
+#login-qq {  }
+
+/* 注册 */
+#signup { }
+
+/* 找回密码 */
+#getpassword { }
+#getpassword .login-link { float: left; }
+#getpassword .signup-link { float: right; }
+
 /* 导航 */
 #nav { background: rgb(255,255,255); border-bottom: solid 1px #e7e7e7; border-radius: 4px; }
 	#nav .wrap_pines { padding: 15px 0; }
 	#logo { width: 136px; height: 54px; }
 		#logo img { width: 136px; height: 54px; }
-	#menu { margin-left: 80px; margin-top: 10px; }
-	#menu li { float: left; margin-right: 40px; }
-	#menu li a { display: block; text-align: center; color: #131313; font-family: 'Open Sans'; font-weight:600; font-size: 16px; border-radius: 20px; padding: 10px 20px; transition: all 0.4s ease 0s; }
+	#menu { margin-left: 80px; padding: 7px 0; }
+	#menu li { margin-right: 20px; float: left; }
+	#menu li a { display: inline-block; text-align: center; color: #131313; font-family: 'Open Sans'; font-weight:600; font-size: 16px; border-radius: 20px; padding: 12px 20px; transition: all 0.4s ease 0s; }
 	#menu li a:hover, #menu li a.selected { background: #f8504b; color: #fff; }
+
+	#nav-login { padding: 10px; }
+	/*#323A45*/
+	/*#nav-login a { display: inline-block; height: 40px; line-height: 40px; background: #323A45; color: #fff; }*/
+	#nav-login a { display: inline-block; height: 32px; line-height: 32px; border: solid 1px #323A45; border-radius: 2em; padding: 0 2em; font-size: 14px; font-family: '微软雅黑', 'Helvetica Neue', sans-serif, 'SimHei'; margin-left: 7px; transition: all 0.4s ease 0s; }
+	#nav-login a.signup, #nav-login a.login:hover { background: #323A45; color: #fff; }
+	#nav-login a.signup:hover, #nav-login a.login { background: #fff; color: #323A45; }
+
+	#nav .current-user { display: inline-block; font-size: 14px; float: right; padding: 20px 0; color: #000; }
+	#nav .current-user a { color: #000; margin-left: 20px; }
 
 /* 链接 */
 #link { background: rgb(30,31,36); padding: 30px 0; }
@@ -44,7 +81,7 @@ body { width: 1366px; margin: 0 auto; background: #fff; }
 .float_right { float: right; }
 .title { text-align: center; }
 div, p, a { overflow: hidden; text-overflow: ellipsis; }
-span { color: #f8504b; margin: 0 6px; }
+.span-title { color: #f8504b; margin: 0 6px; }
 .line {  margin:10px 0 30px; background: #f8504b; height: 5px; }
 body, button, input, select, textarea { font: 'Open Sans', Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif; }
 
@@ -52,5 +89,8 @@ body, button, input, select, textarea { font: 'Open Sans', Tahoma, Helvetica, Ar
 .wrap_pines>.words { color: #dedede; font-family: 'Open Sans';font-weight:400; font-size: 20px; line-height: 25px; margin-top: 10px; text-align: center; }
 .wrap_pines>.line { color: #f8504b; height: 3px; }
 .blank { width: 30px; float: left; height: 1px; }
+
+.pine-center { left: 0; top: 0; right: 0; bottom: 0; margin: auto; }
+label, button { cursor: pointer; }
 
 
