--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -19,6 +19,7 @@ body { width: 1366px; margin: 0 auto; background: #fff; }
 .oauth-field input { font-size: 16px; width: 370px; height: 48px; padding: 0 15px; margin-bottom: 15px; border: 1px solid rgba(50,58,69,.2); border-radius: 5px; }
 .oauth-actions input { margin-top: 40px; width: 100%; height: 48px; background: #323a45; color: #fff; transition: opacity .2s ease; opacity: 0.9; border-radius: 24px; border: none; font-size: 24px; cursor: pointer; }
 .oauth-link { text-align: center; margin-top: 20px; }
+.oauth-link-a, .oauth-link a {  color: rgba(0,0,0,.6); }
 
 /* 登录 */
 #login {}
