--- a/app/views/home/_project.html.erb
+++ b/app/views/home/_project.html.erb
@@ -36,5 +36,5 @@
 				<div class="remarks">2048</div>
 			</a></li>
 		</ul></div>
-		<div class="more"><a onclick="alertMessage('建设中...')" style="cursor: pointer;">更多项目</a></div>
+		<div class="more"><a style="cursor: default;">更多项目</a></div>
 	</div></div>
