--- a/app/views/topics/_author.html.erb
+++ b/app/views/topics/_author.html.erb
@@ -1,4 +1,4 @@
-<div class="topics-title"><h2 class="authorname">作者</h2></div>
+<div class="topics-title"><h2 class="authorname">作者信息</h2></div>
 <div id="topics-author">
 	<span class="header"><%= gravatar_for @topic.user %></span>
 	<span class="name"><%= @topic.user.username %></span>
