--- a/app/views/home/_about.html.erb
+++ b/app/views/home/_about.html.erb
@@ -4,6 +4,6 @@
 			<p class="words">对于Web开发刚刚入门的我们，只有自己通过去做，去实验，因为没有人告诉你如何去做。有时候，为了我们会找到一堆视频，一堆文档进行学习，但无论如何都需要一个明确的目标 —— “哦，这个阶段，我要独立完成一个简单的Web应用程序，限期两周”。</p>
 		</div>
 		<div class="contact float_right">
-			<a onclick="alertMessage('谢谢光临本站！有建设性问题者，请发邮件至站长邮箱：pinewong@163.com')" style="cursor: pointer;">联系我们 -></a>
+			<a onclick="alert('谢谢光临本站！有建设性问题者，请发邮件至站长邮箱：pinewong@163.com')" style="cursor: pointer;">联系我们 -></a>
 		</div>
 	</div></div>
