--- a/app/views/home/_blogger.html.erb
+++ b/app/views/home/_blogger.html.erb
@@ -9,10 +9,10 @@
 					<h1 class="name">伯乐在线博客 / <span>全栈</span></h1>
 					<p class="words">伯乐在线-博客( web.JobBole.com )专注于分享职业相关的博客文章、业界资讯和职业相关的优秀工具和资源。博文类别包括：程序员、设计、营销、互联网、IT技术、自由职业、创业、运营、管理、翻译和人力资源等等</p>
 					<div class="follow"><ul>
-						<li><a onclick="alertMessage('资料收集中...')" class="weichat" style="cursor: pointer;"></a></li>
-						<li><a onclick="alertMessage('资料收集中...')" class="sinaweibo" style="cursor: pointer;"></a></li>
-						<li><a onclick="alertMessage('资料收集中...')" class="tencentweibo" style="cursor: pointer;"></a></li>
-						<li><a onclick="alertMessage('资料收集中...')" class="qq" style="cursor: pointer;"></a></li>
+						<li><a class="weichat" style="cursor: default;"></a></li>
+						<li><a class="sinaweibo" style="cursor: default;"></a></li>
+						<li><a class="tencentweibo" style="cursor: default;"></a></li>
+						<li><a class="qq" style="cursor: default;"></a></li>
 					</ul></div>
 				</div>
 			</li><div class="blank"></div>
@@ -22,10 +22,10 @@
 					<h1 class="name">巩朋 / <span>全栈工程师</span></h1>
 					<p class="words">巩朋。本科在大连理工大学胡混了三年，本来打算毕业后直接工作，但大四在大连某IT企业的实习经历促使我决定读研（找一个更有价值的工作）。于是我放弃了工作，一边在大连理工大学学习英语双学位，一边准备考研。然后幸运的进入了北京航空航天大学计算机系，师从张莉老师。</p>
 					<div class="follow"><ul>
-						<li><a onclick="alertMessage('资料收集中...')" class="weichat" style="cursor: pointer;"></a></li>
-						<li><a onclick="alertMessage('资料收集中...')" class="sinaweibo" style="cursor: pointer;"></a></li>
-						<li><a onclick="alertMessage('资料收集中...')" class="tencentweibo" style="cursor: pointer;"></a></li>
-						<li><a onclick="alertMessage('资料收集中...')" class="qq" style="cursor: pointer;"></a></li>
+						<li><a class="weichat" style="cursor: default;"></a></li>
+						<li><a class="sinaweibo" style="cursor: default;"></a></li>
+						<li><a class="tencentweibo" style="cursor: default;"></a></li>
+						<li><a class="qq" style="cursor: default;"></a></li>
 					</ul></div>
 				</div>
 			</li>
@@ -35,10 +35,10 @@
 					<h1 class="name">前端观察 / <span>前端</span></h1>
 					<p class="words">这里是一个纯粹的前端技术分享网站，本站的目的是为前端技术人员提供所需的资讯及资源。向来中国的前端开发领域，就像一盘散沙一样，每个人每个站都各自为营，高手就像就像天空的星星一样多，但是他们的成就却很少广为传播，初学者却苦于在大海一样的设计中寻找自己的参考。</p>
 					<div class="follow"><ul>
-						<li><a onclick="alertMessage('资料收集中...')" class="weichat" style="cursor: pointer;"></a></li>
-						<li><a onclick="alertMessage('资料收集中...')" class="sinaweibo" style="cursor: pointer;"></a></li>
-						<li><a onclick="alertMessage('资料收集中...')" class="tencentweibo" style="cursor: pointer;"></a></li>
-						<li><a onclick="alertMessage('资料收集中...')" class="qq" style="cursor: pointer;"></a></li>
+						<li><a class="weichat" style="cursor: default;"></a></li>
+						<li><a class="sinaweibo" style="cursor: default;"></a></li>
+						<li><a class="tencentweibo" style="cursor: default;"></a></li>
+						<li><a class="qq" style="cursor: default;"></a></li>
 					</ul></div>
 				</div>
 			</li><div class="blank"></div>
@@ -48,10 +48,10 @@
 					<h1 class="name">风雪之隅 / <span>后端工程师</span></h1>
 					<p class="words">Laruence，PHP开发组成员, Zend兼职顾问, PHP7核心开发者, Yaf, Yar, Yac等项目作者.</p>
 					<div class="follow"><ul>
-						<li><a onclick="alertMessage('资料收集中...')" class="weichat" style="cursor: pointer;"></a></li>
-						<li><a onclick="alertMessage('资料收集中...')" class="sinaweibo" style="cursor: pointer;"></a></li>
-						<li><a onclick="alertMessage('资料收集中...')" class="tencentweibo" style="cursor: pointer;"></a></li>
-						<li><a onclick="alertMessage('资料收集中...')" class="qq" style="cursor: pointer;"></a></li>
+						<li><a class="weichat" style="cursor: default;"></a></li>
+						<li><a class="sinaweibo" style="cursor: default;"></a></li>
+						<li><a class="tencentweibo" style="cursor: default;"></a></li>
+						<li><a class="qq" style="cursor: default;"></a></li>
 					</ul></div>
 				</div>
 			</li>
