--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 	<link rel="icon" href="" sizes="192x192" />
 	<link rel="apple-touch-icon-precomposed" href="" sizes="180x180" />
 	<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	<%= csrf_meta_tags %>
 </head>
 <body>
@@ -20,7 +21,8 @@
 	<%= render '/shared/copyright' %>
 	<%= render '/shared/debug' %>
 	<%= render '/shared/flashAlert' %>
-
-	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	
+	<%= javascript_include_tag 'base', 'data-turbolinks-track' => true %>
+	<%= javascript_include_tag params[:controller], 'data-turbolinks-track' => true %>
 </body>
 </html>
