--- a/app/views/topics/_essence.html.erb
+++ b/app/views/topics/_essence.html.erb
@@ -1,8 +1,6 @@
 <div class="topics-title"><h2>推荐阅读</h2></div>
 <div class="content">
-	<div class="cell"><a href="">Docker三步搭建开发调试环境</a></div>
-	<div class="cell"><a href="">Docker三步搭建开发调试环境</a></div>
-	<div class="cell"><a href="">Docker三步搭建开发调试环境</a></div>
-	<div class="cell"><a href="">Docker三步搭建开发调试环境</a></div>
-	<div class="cell"><a href="">Docker三步搭建开发调试环境</a></div>
+	<% @topics_essence.each do |topic| %>
+	<div class="cell"><%= link_to topic.title, topic_path(topic) %></div>
+	<% end %>
 </div>
