--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -9,7 +9,7 @@
 			<li><a href="<%= study_path %>" <% if params[:controller] == 'study' %>class="selected"<% end %>>在线学习</a></li>
 			<li><a href="<%= download_path %>" <% if params[:controller] == 'download' %>class="selected"<% end %>>工具下载</a></li>
 			<li><a href="<%= topics_path %>" <% if params[:controller] == 'topics' %>class="selected"<% end %>>互动讨论</a></li>
-			<li><a target="_blank" href="http://www.pinewong.com/">作者笔记</a></li>
+			<!-- <li><a target="_blank" href="http://www.pinewong.com/">作者笔记</a></li> -->
 		</ul>
 	</div>
 	
