--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,15 +4,15 @@
     <!-- 头像，话题 -->
     <div class="topics user-edit-cell">
       <div class="header"><%= gravatar_for @user %></div> 
-      <%= link_to '我的话题', root_path, class: 'topic-link' %>
-      <%= link_to '我参与的话题', root_path, class: 'topic-link' %>
+      <%= link_to '我发布的话题', user_pub_topic_path, class: 'topic-link' %>
+      <%= link_to '我参与的话题', user_reply_topic_path, class: 'topic-link' %>
     </div>
 
     <!-- 第三方认证 -->
     <div class="add-oauth user-edit-cell">
       <h2 class="title">绑定其他账号</h2>
-      <p class="oauth-item"><%= link_to 'GitHub', root_path %></p>
-      <p class="oauth-item"><%= link_to '微信', root_path %></p>
+      <p class="oauth-item"><a style="cursor: default">@GitHub</a></p>
+      <p class="oauth-item"><a style="cursor: default">@WeiChat</a></p>
     </div>
   </div>
 
