--- a/app/views/home/_outline.html.erb
+++ b/app/views/home/_outline.html.erb
@@ -10,35 +10,35 @@
 	<div id="out_content">
 		<div class="item float_left">
 			<div class="icon">
-				<a style="cursor: default;"><%= image_tag 'outline1.png' %></a>
+				<a href="<%= study_path %>" target="_blank"><%= image_tag 'outline1.png' %></a>
 			</div>
-			<h1 class="title"><a style="cursor: default;">快速入门</a></h1>
+			<h1 class="title"><a href="<%= study_path %>" target="_blank">快速入门</a></h1>
 			<p class="main">视频教程、书籍，怎么开心怎么来，先跟着完成一个小Demo起，记住，此时兴趣最重要。</p>
-			<p class="view"><a style="cursor: default;">查看详细</a></p>
+			<p class="view"><a href="<%= study_path %>" target="_blank">查看详细</a></p>
 		</div>
 		<div class="item float_left">
 			<div class="icon">
-				<a style="cursor: default;"><%= image_tag 'outline2.png' %></a>
+				<a href="<%= study_path %>" target="_blank"><%= image_tag 'outline2.png' %></a>
 			</div>
-			<h1 class="title"><a style="cursor: default;">巩固练习</a></h1>
+			<h1 class="title"><a href="<%= study_path %>" target="_blank">巩固练习</a></h1>
 			<p class="main">从零开始学习，遇到二次问题一定做笔记。但还是仍然不要忘了练习，练习，练习。</p>
-			<p class="view"><a style="cursor: default;">查看详细</a></p>
+			<p class="view"><a href="<%= study_path %>" target="_blank">查看详细</a></p>
 		</div>
 		<div class="item float_left">
 			<div class="icon">
-				<a style="cursor: default;"><%= image_tag 'outline3.png' %></a>
+				<a href="<%= study_path %>" target="_blank"><%= image_tag 'outline3.png' %></a>
 			</div>
-			<h1 class="title"><a style="cursor: default;">系统学习</a></h1>
+			<h1 class="title"><a href="<%= study_path %>" target="_blank">系统学习</a></h1>
 			<p class="main">在能胜任简单的项目后，购买专业书籍进行系统学习，这段时间应该是扎实基本功。</p>
-			<p class="view"><a style="cursor: default;">查看详细</a></p>
+			<p class="view"><a href="<%= study_path %>" target="_blank">查看详细</a></p>
 		</div>
 		<div class="item float_left">
 			<div class="icon">
-				<a style="cursor: default;"><%= image_tag 'outline4.png' %></a>
+				<a href="<%= study_path %>" target="_blank"><%= image_tag 'outline4.png' %></a>
 			</div>
-			<h1 class="title"><a style="cursor: default;">成神之路</a></h1>
+			<h1 class="title"><a href="<%= study_path %>" target="_blank">成神之路</a></h1>
 			<p class="main">遇到问题，不要冷落谷歌，常用stackoverflow。此时的你应该能对手册运用自如！</p>
-			<p class="view"><a style="cursor: default;">查看详细</a></p>
+			<p class="view"><a href="<%= study_path %>" target="_blank">查看详细</a></p>
 		</div>
 	</div>
 </div></div>
