--- a/app/views/shared/_link.html.erb
+++ b/app/views/shared/_link.html.erb
@@ -4,10 +4,10 @@
 		<div class="line"></div>
 		<div>
 			<ul>
-				<li><a target="_blank" onclick="alertMessage('建设中...')" style="cursor: pointer;">快速入门</a></li>
-				<li><a target="_blank" onclick="alertMessage('建设中...')" style="cursor: pointer;">巩固练习</a></li>
-				<li><a target="_blank" onclick="alertMessage('建设中...')" style="cursor: pointer;">系统学习</a></li>
-				<li><a target="_blank" onclick="alertMessage('建设中...')" style="cursor: pointer;">成神之路</a></li>
+				<li><a target="_blank" href="<%= study_path %>">快速入门</a></li>
+				<li><a target="_blank" href="<%= study_path %>">巩固练习</a></li>
+				<li><a target="_blank" href="<%= study_path %>">系统学习</a></li>
+				<li><a target="_blank" href="<%= study_path %>">成神之路</a></li>
 			</ul>
 		</div>
 	</div>
@@ -16,7 +16,7 @@
 		<div class="line"></div>
 		<div>
 			<ul>
-				<li><a target="_blank" onclick="alertMessage('资料收集中...')" style="cursor: pointer;">书籍推荐</a></li>
+				<li><a target="_blank" href="<%= download_path %>">书籍推荐</a></li>
 				<li><a target="_blank" href="<%= download_path %>">软件、工具分享</a></li>
 			</ul>
 		</div>
