re application.js to public

--- a/app/views/download/index.html.erb
+++ b/app/views/download/index.html.erb
@@ -1,12 +1,7 @@
 <% provide :title, '工具下载' %>
 
-<!-- 回到顶部 -->
-
-<!-- 导航 -->
-
-<!-- 下载 -->
 <%= render 'download' %>
-
-<!-- 链接 -->
-
-<!-- 版权 -->
+<script type="text/javascript">
+	// 更换下载内容
+	changeDownloadCategory()
+</script>
