--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,3 +14,15 @@
 
 <!-- 关于 -->
 <%= render 'about' %>
+
+<script type="text/javascript">
+	// 轮播
+	var interval;
+	slide(interval, 5000);
+
+	// 项目演示动画
+	changeDemo();
+
+	// 离开页面停止计时器
+	leaveStop();
+</script>
