--- a/app/views/home/_project.html.erb
+++ b/app/views/home/_project.html.erb
@@ -3,35 +3,35 @@
 		<p class="words">简单的Demo演示</p>
 		<div class="line"></div>
 		<div class="demo"><ul>
-			<li><a target="_blank" href="http://demo.webxx.net/meizu">
+			<li><a target="_blank" href="http://www.webxx.net/demo/meizu">
 				<div class="img"><%= image_tag 'project_1.png' %></div>
 				<div class="remarks">仿魅族社区</div>
 			</a></li>
-			<li><a target="_blank" href="http://demo.webxx.net/mi">
+			<li><a target="_blank" href="http://www.webxx.net/demo/mi">
 				<div class="img"><%= image_tag 'project_2.png' %></div>
 				<div class="remarks">仿小米官网</div>
 			</a></li>
-			<li><a target="_blank" href="http://demo.webxx.net/sudoku">
+			<li><a target="_blank" href="http://www.webxx.net/demo/sudoku">
 				<div class="img"><%= image_tag 'sudoku.png' %></div>
 				<div class="remarks">数独强解</div>
 			</a></li>
-			<li><a target="_blank" href="http://demo.webxx.net/love">
+			<li><a target="_blank" href="http://www.webxx.net/demo/love">
 				<div class="img"><%= image_tag 'project_4.png' %></div>
 				<div class="remarks">阿狸的浪漫故事</div>
 			</a></li>
-			<li><a target="_blank" href="http://demo.webxx.net/fishjoy">
+			<li><a target="_blank" href="http://www.webxx.net/demo/fishjoy">
 				<div class="img"><%= image_tag 'game_1.png' %></div>
 				<div class="remarks">捕鱼达人</div>
 			</a></li>
-			<li><a target="_blank" href="http://demo.webxx.net/donkeyjump">
+			<li><a target="_blank" href="http://www.webxx.net/demo/donkeyjump">
 				<div class="img"><%= image_tag 'game_2.png' %></div>
 				<div class="remarks">驴子跳跳</div>
 			</a></li>
-			<li><a target="_blank" href="http://demo.webxx.net/mousehit">
+			<li><a target="_blank" href="http://www.webxx.net/demo/mousehit">
 				<div class="img"><%= image_tag 'game_3.png' %></div>
 				<div class="remarks">打地鼠</div>
 			</a></li>
-			<li><a target="_blank" href="http://demo.webxx.net/weixin2048">
+			<li><a target="_blank" href="http://www.webxx.net/demo/weixin2048">
 				<div class="img"><%= image_tag 'game_4.png' %></div>
 				<div class="remarks">2048</div>
 			</a></li>
